tests/NormalTests/paczka1/small_fuzzy/91185429.err
Error in line 9: dC7kjl8A9z A;;3 58,4
Error in line 8: LBQllG7gkJ A336 42,9
Error in line 12: LBQllG7gkJ A663 14,5
